tests/snapshots/snapshots__bubble-field.snap
---
source: tests/snapshots.rs
expression: dump(&entry)
---
== dark-truecolor




                       ˚                                           ˚

                                                           ·
                             ·                                   ·

---
r0 c0..72 bg=Background
r1 c0..72 bg=Background
r2 c0..72 bg=Background
r3 c0..72 bg=Background
r4 c0..23 bg=Background
r4 c23..24 fg=Dim bg=Background
r4 c24..67 bg=Background
r4 c67..68 fg=Dim bg=Background
r4 c68..72 bg=Background
r5 c0..72 bg=Background
r6 c0..59 bg=Background
r6 c59..60 fg=Dim bg=Background
r6 c60..72 bg=Background
r7 c0..29 bg=Background
r7 c29..30 fg=Dim bg=Background
r7 c30..65 bg=Background
r7 c65..66 fg=Dim bg=Background
r7 c66..72 bg=Background
r8 c0..72 bg=Background

== dark-graphite




                       ˚                                           ˚

                                                           ·
                             ·                                   ·

---
r0 c0..72 bg=Background
r1 c0..72 bg=Background
r2 c0..72 bg=Background
r3 c0..72 bg=Background
r4 c0..23 bg=Background
r4 c23..24 fg=Dim bg=Background
r4 c24..67 bg=Background
r4 c67..68 fg=Dim bg=Background
r4 c68..72 bg=Background
r5 c0..72 bg=Background
r6 c0..59 bg=Background
r6 c59..60 fg=Dim bg=Background
r6 c60..72 bg=Background
r7 c0..29 bg=Background
r7 c29..30 fg=Dim bg=Background
r7 c30..65 bg=Background
r7 c65..66 fg=Dim bg=Background
r7 c66..72 bg=Background
r8 c0..72 bg=Background

== light-truecolor




                       ˚                                           ˚

                                                           ·
                             ·                                   ·

---
r0 c0..72 bg=Background
r1 c0..72 bg=Background
r2 c0..72 bg=Background
r3 c0..72 bg=Background
r4 c0..23 bg=Background
r4 c23..24 fg=Dim bg=Background
r4 c24..67 bg=Background
r4 c67..68 fg=Dim bg=Background
r4 c68..72 bg=Background
r5 c0..72 bg=Background
r6 c0..59 bg=Background
r6 c59..60 fg=Dim bg=Background
r6 c60..72 bg=Background
r7 c0..29 bg=Background
r7 c29..30 fg=Dim bg=Background
r7 c30..65 bg=Background
r7 c65..66 fg=Dim bg=Background
r7 c66..72 bg=Background
r8 c0..72 bg=Background

== dark-256




                       ˚                                           ˚

                                                           ·
                             ·                                   ·

---
r0 c0..72 bg=Background
r1 c0..72 bg=Background
r2 c0..72 bg=Background
r3 c0..72 bg=Background
r4 c0..23 bg=Background
r4 c23..24 fg=Dim bg=Background
r4 c24..67 bg=Background
r4 c67..68 fg=Dim bg=Background
r4 c68..72 bg=Background
r5 c0..72 bg=Background
r6 c0..59 bg=Background
r6 c59..60 fg=Dim bg=Background
r6 c60..72 bg=Background
r7 c0..29 bg=Background
r7 c29..30 fg=Dim bg=Background
r7 c30..65 bg=Background
r7 c65..66 fg=Dim bg=Background
r7 c66..72 bg=Background
r8 c0..72 bg=Background

== light-256




                       ˚                                           ˚

                                                           ·
                             ·                                   ·

---
r0 c0..72 bg=Background|Surface
r1 c0..72 bg=Background|Surface
r2 c0..72 bg=Background|Surface
r3 c0..72 bg=Background|Surface
r4 c0..23 bg=Background|Surface
r4 c23..24 fg=Dim bg=Background|Surface
r4 c24..67 bg=Background|Surface
r4 c67..68 fg=Dim bg=Background|Surface
r4 c68..72 bg=Background|Surface
r5 c0..72 bg=Background|Surface
r6 c0..59 bg=Background|Surface
r6 c59..60 fg=Dim bg=Background|Surface
r6 c60..72 bg=Background|Surface
r7 c0..29 bg=Background|Surface
r7 c29..30 fg=Dim bg=Background|Surface
r7 c30..65 bg=Background|Surface
r7 c65..66 fg=Dim bg=Background|Surface
r7 c66..72 bg=Background|Surface
r8 c0..72 bg=Background|Surface

== ansi-16




                       ˚                                           ˚

                                                           ·
                             ·                                   ·

---
r4 c23..24 dim
r4 c67..68 dim
r6 c59..60 dim
r7 c29..30 dim
r7 c65..66 dim

== unknown-ground




                       ˚                                           ˚

                                                           ·
                             ·                                   ·

---
r4 c23..24 dim
r4 c67..68 dim
r6 c59..60 dim
r7 c29..30 dim
r7 c65..66 dim

== no-color




                       ˚                                           ˚

                                                           ·
                             ·                                   ·

---
r4 c23..24 dim
r4 c67..68 dim
r6 c59..60 dim
r7 c29..30 dim
r7 c65..66 dim

== ascii




                       o                                           o

                                                           .
                             .                                   .

---
r4 c23..24 dim
r4 c67..68 dim
r6 c59..60 dim
r7 c29..30 dim
r7 c65..66 dim
